[package]
name = "logica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = {version = "4.0.29", features= ["derive"]}
lalrpop-util = {version = "0.19.7", features= ["lexer"]}

[build-dependencies]
lalrpop = "0.19.7"